--- a/pizza-lab-react-app/src/style/site.css
+++ b/pizza-lab-react-app/src/style/site.css
@@ -30,3 +30,18 @@ a.nav-link.active {
 .selected {
 	background: #666666;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  
+  body {
+    margin-bottom: 220px;
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
